# fft-webgpu

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp
server/: index.html  index.js
src/: app.cpp  main.cpp
